NetBSD Problem Report #41358

From yamt@mwd.biglobe.ne.jp  Tue May  5 15:19:21 2009
Return-Path: <yamt@mwd.biglobe.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 67B4D63C131
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  5 May 2009 15:19:21 +0000 (UTC)
Message-Id: <20090505151919.59E3C97EF8@kaeru.lan>
Date: Wed,  6 May 2009 00:19:19 +0900 (JST)
From: yamt@mwd.biglobe.ne.jp
Reply-To: yamt@mwd.biglobe.ne.jp
To: gnats-bugs@gnats.NetBSD.org
Subject: top -n is broken
X-Send-Pr-Version: 3.95

>Number:         41358
>Category:       bin
>Synopsis:       top -n is broken
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue May 05 15:20:00 +0000 2009
>Closed-Date:    Sun Jun 21 20:23:22 +0000 2009
>Last-Modified:  Sun Jun 21 20:23:22 +0000 2009
>Originator:     YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
>Release:        NetBSD 5.99.11
>Organization:

>Environment:
System: NetBSD kaeru 5.99.11
Architecture: i386
Machine: i386
>Description:
	kaeru% top -n
	top: display too small
	kaeru% top > /dev/null
	top: display too small
	kaeru% 
>How-To-Repeat:
	see above.
>Fix:


>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41358 CVS commit: src/external/bsd/top/dist
Date: Tue, 5 May 2009 14:52:13 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Tue May  5 18:52:13 UTC 2009

 Modified Files:
 	src/external/bsd/top/dist: display.c

 Log Message:
 PR/41358: YAMAMOTO Takashi: top -n is broken, don't return -1 early if
 !smartterminal


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/external/bsd/top/dist/display.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Sun, 21 Jun 2009 16:23:22 -0400
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.