PR/41358: YAMAMOTO Takashi: top -n is broken, don't return -1 early if !smartterminal